fix issue with flex item getting cut off

--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,10 +1,10 @@
 body {
+  margin: 0;
   display: flex;
   flex-direction: column;
   height: 100vh;
   text-align: center;
   align-items: center;
-  justify-content: center;
   background-color: #d5e1ef;
   font-family: "Outfit";
 }
@@ -16,18 +16,21 @@ p {
   font-size: 16px;
   color: hsl(220, 15%, 55%);
 }
-.container {
+.box {
   background-color: hsl(0, 0%, 100%);
-  box-shadow: 0 2px 20px rgb(0 0 0 / 0.2);
+  box-shadow: 0 2px 4px rgb(0 0 0 / 0.2);
   border-radius: 20px;
   padding: 16px;
   max-width: 320px;
+}
+.container {
+  margin: auto;
 }
 .header {
   margin: 25px 20px 30px;
 }
 .attribution {
-  margin-top: 15px;
+  margin-top: 10px;
   font-size: 11px;
 }
 .attribution a {
